# weather

./: .gitignore  Cargo.toml  readme.md  user_settings.json
weather-cli/: Cargo.toml
weather-cli/src/: main.rs
weather-cli/src/data/: fs_storage.rs  mod.rs  rest_client.rs
weather-cli/src/logic/: exit.rs  main_menu.rs  mod.rs  select_date.rs  select_location.rs  select_provider.rs  weather_report.rs
weather-common/: Cargo.toml
weather-common/src/models/: location.rs  mod.rs  settings.rs  weather_report_data.rs
weather-common/src/models/providers/: mod.rs  open_weather_provider.rs  weather_api_provider.rs
weather-rest/: Cargo.toml
weather-rest/src/: lib.rs
weather-socket/: Cargo.toml
