[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weather-common = { path = "../weather-common"}
weather-rest = { path = "../weather-rest" }
weather-socket = { path = "../weather-socket" }

anyhow = "1.0"
serde = {version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = true, features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt"] }

